--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ APIFlask==2.1.1
 apispec==6.6.0
 apispec-webframeworks==1.1.0
 blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
 Flask-HTTPAuth==4.8.0
@@ -11,6 +13,7 @@ flask-marshmallow==1.2.1
 flask-openapi3==3.0.2
 Flask-RESTful==0.3.10
 gunicorn==21.2.0
+idna==3.7
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
@@ -20,7 +23,9 @@ pydantic==2.7.0
 pydantic_core==2.18.1
 pytz==2024.1
 PyYAML==6.0.1
+requests==2.31.0
 six==1.16.0
 typing_extensions==4.11.0
+urllib3==2.2.1
 webargs==8.4.0
 Werkzeug==3.0.2
